infra/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fission-service
  namespace: fission
spec:
  type: ClusterIP
  selector:
    app: metrics
    department: serverless
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
