infra/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: serverless-test-ingress
  namespace: fission
spec:
  rules:
    http: [foobar.com]
      paths:
        - path: /python
          pathType: Prefix
          backend:
            service:
              name: fission-service
              port:
                number: 4200
        - path: /golang
          pathType: Prefix
          backend:
            service:
              name: fission-service
              port:
                number: 8080
